# google-deep-researcher

./: Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: backend-platform.agent.md
.github/workflows/: copilot-setup-steps.yml
src/: auth.py  main.py
tests/: test_main.py
