[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-deep-researcher"
version = "0.1.0"
description = "Deep research platform powered by Google Gemini"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]
